# pydiffusion

./: .gitignore  .travis.yml  CHANGELOG  LICENCE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
binder/: environment.yml
example/: Analysis.ipynb
pydiffusion/: __init__.py  plotting.py  quaternionsimulation.pyx  rotation.py  translation.py
pydiffusion/tests/: conftest.py  test_quaternionsimulation.py  test_rotation.py  test_translation.py
pydiffusion/tests/data/: curve.xtc
pydiffusion/util/: __init__.py  hydropro.py  mda.py  random.py  testing.py  timeseries.py
pydiffusion/util/tests/: test_hydropro.py  test_mda.py  test_random.py  test_testing.py  test_timeseries.py
pydiffusion/util/tests/data/: hydropro-res.txt
