[build-system]
# Minimum requirements for the build system to execute
requires = [
    "Cython>=0.28",
    "packaging",
    # numpy requirement for wheel builds for distribution on PyPI - building
    # against 2.x yields wheels that are also compatible with numpy 1.x at
    # runtime.
    # Note that building against numpy 1.x works fine too - users and
    # redistributors can do this by installing the numpy version they like and
    # disabling build isolation.
    "numpy<2.0.0",
    # Set to minimum version of setuptools that allows pyproject.toml
    "setuptools >= 40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = '.'
venv = ".venv"  # Path to your virtual environment (relative to pyproject.toml)
include = ["src/main"]
